# we-have-ascii-at-home

./: .gitmodules  README.md  index.html  style.css
db/: schema.sql
frontend/: index.html  style.css
frontend/js/: main.js
scripts/: add_casts_to_db.sh
whaah-backend/: Cargo.toml
whaah-backend/src/: main.rs
