[package]
name = "whaah-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4"
chrono = "0.4.24"
json = "0.12.4"
serde = { version = "1.0", features = ["derive"] }
sqlite = "0.30.4"
